--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TaskFlow - Your Modern To-Do List</title>
+    <title>TaskFlow - Sua lista de tarefas</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="./index.css" rel="stylesheet">
 </head>
